--- a/src/scss/scssvars.scss
+++ b/src/scss/scssvars.scss
@@ -49,7 +49,7 @@ $darkTheme: (clrPrimary: hsl(204, 100%, 49%),
 	clrSecondaryAccent: hsl(298, 89%, 28%),
 
 	clrTernary: hsl(0, 89%, 48%),
-	clrTernaryAccent: hsla(0, 89%, 28%),
+	clrTernaryAccent: hsl(0, 89%, 28%),
 
 	clrBg: hsl(0, 0%, 10%),
 	clrBgSecondary: hsl(0, 0%, 33%),
